 6. Place home button, if shown, to the right of the back button (matches
    browsers, etc.)
 7. If configured to show home button, then also show in titlebar of advanced
    search and extras pages.
 8. Show SugarCube pages in 'Extras' if it is installed.
 9. Swap (+) and (>) buttons to match LMS's default order.
10. Replace GIF images in Classic Skin with SVGs.

1.9.1
-----
1. Add option to show 'Go home' button.
2. No need to scroll search field into view if its in subtoolbar.
3. Fix rating HTML being displayed when a queue item's rating is updated and
   'More' selected.
4. Add note to sort-favourites config item stating that folders are always
   sorted.
5. Move ratings in portrait now-playing to bottom of cover.
6. Fix position of ratings in landscape now-playing.
7. Fix track title mangling when adding single tracks to the queue.
8. When building command use 'commonParams' from item if it exists - fixes
   playing tracks from top/flop tracks.
9. Restrict top/flop tracks to 200 items.

1.9.0
-----
 1. Allow specifying theme, and colour, via URL query. e.g.
    http://SERVER:9000/material/?theme=dark,green For platform themes (e.g.
    Adwaita-Dark) you need to specify path. e.g. "theme=linux/dark/Adwaita-Dark"
 2. Add 'Add to playlist' action, allowing tracks to be saved to new, or
    existing, playlists.
 3. On desktop browsers, allow keypress to jump via jumplist.
 4. Ignore swipe to change page if started in time position bar.
 5. For mobile devices, show time position tooltip with touch and drag.
 6. Replace search dialog with a search-as-type text field in subtoolbar.
 7. Show other search options at end of search results.
 8. Intercept links on now-playing and browse pages and show a menu allowing to
    choose from following link or searching for item.
 9. Allow editing of podcast URL as well as name.
10. Use treble-clef as genre icon.
11. Fix HTML tags shown in confirmation dialog.
12. Add action to remove duplicates from playlists.