@@ -12,6 +12,7 @@
  8. Show SugarCube pages in 'Extras' if it is installed.
  9. Swap (+) and (>) buttons to match LMS's default order.
 10. Replace GIF images in Classic Skin with SVGs.
+11. Optionally display technical info when listing tracks in browse view.
 
 1.9.1
 -----
